<resources>

    <string name="app_name">PGReader</string>
    <string name="title_unit_detail">Unit Detail</string>
    <string name="title_unit_list">Units</string>
    <string name="attackAir">Attack Air</string>
    <string name="defenseAir">Defense Air</string>
    <string name="attackHard">Attack Hard</string>
    <string name="defenseGround">Defense Ground</string>
    <string name="attackNaval">Attack Naval</string>
    <string name="defenseClose">Defense Close</string>
    <string name="attackSoft">Attack Soft</string>
    <string name="targetType">Target Type</string>
    <string name="moveType">Move Type</string>
    <string name="nation">Nation</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">PGReader</string>
    <string name="manageResources">Manage Resources</string>
    <string name="unitBrowser">Unit Browser</string>
    <string name="title_activity_resource_loader">Load resources</string>
    <string name="pg_data_corrupted">The Panzer General data are &lt;b&gt;corrupted&lt;/b&gt;, Resources cannot be loaded</string>
    <string name="closeDialog">Close</string>
    <string name="panzerGeneralCovertArt">Panzer General Covert Art</string>
    <string name="pleaseWait">Please wait</string>
    <string name="loadingData">Loading data…</string>
    <string name="loadingUnit">Loading units…</string>
    <string name="loadingIcons">Loading icons…</string>
    <string name="loadingFlags">Loading flags…</string>
    <string name="askForResourceSet">Did you load a resource set ?</string>
    <string name="cannotFindUnits">Cannot find any units</string>
    <string name="cannotFindTerrains">Cannot find any terrains</string>
    <string name="terrainBrowser">browse terrain</string>
    <string name="title_terrain_detail">terrain Detail</string>
    <string name="title_terrain_list">Terrains</string>
    <string name="name">Name</string>
</resources>