<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainUnitLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/detailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal" >

        <com.pgreader.ui.view.IconsResourceSingleView
            android:id="@+id/unitFlag"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true" />

        <TextView
            android:id="@+id/unit_detail"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="false"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/unitFlag"
            android:padding="16dp"
            tools:context=".ui.UnitDetailFragment" />

    </RelativeLayout>

    <TableLayout
        android:id="@+id/propTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/detailLayout"
        android:layout_margin="10dp" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/attackAir" />

            <TextView
                android:id="@+id/attackAir"
                android:layout_width="30dp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/defenseAir" />

            <TextView
                android:id="@+id/defAir"
                android:layout_width="30dp"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attackHard" />

            <TextView
                android:id="@+id/attackHard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defenseGround" />

            <TextView
                android:id="@+id/defGround"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attackNaval" />

            <TextView
                android:id="@+id/attackNaval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defenseClose" />

            <TextView
                android:id="@+id/defClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attackSoft" />

            <TextView
                android:id="@+id/attackSoft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/targetType" />

            <TextView
                android:id="@+id/targetType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moveType" />

            <TextView
                android:id="@+id/moveType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nation" />

            <TextView
                android:id="@+id/nation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>
    </TableLayout>

    <com.pgreader.ui.view.IconsResourceSingleView
        android:id="@+id/unitIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/detailLayout"
        android:layout_toRightOf="@+id/propTable"
        android:background="@color/Magenta" />

</RelativeLayout>